modalidad de cursada

--- a/listas_anidadas/index.html
+++ b/listas_anidadas/index.html
@@ -34,5 +34,29 @@
             </ul>
         </li>
     </ol>
+    <h2>Modalidad de cursada</h2>
+    <ul>
+        <li><b>Contenidos en vivo:</b></li>
+        <ul>
+            <li>Clases online por zoom</li>
+            <li>Meetups</li>
+            <li>Clases de repaso</li>
+        </ul>
+        <li><b>Contenido Teórico-Práctico:</b></li>
+        <ul>
+            <li>Teórico
+                <ul>
+                    <li>Documentaciones</li>
+                    <li>Articulos de interes</li>
+                </ul>
+            </li>
+            <li>Práctico
+                <ul>
+                    <li>Desafíos</li>
+                    <li>Entregas</li>
+                </ul>
+            </li>
+        </ul>
+    </ul>
 </body>
 </html>
